<resources>
    <string name="app_name">StaffRecruitment</string>
    <string name="titleMenuExit">Выход</string>
    <string name="hintNameET">Введите имя</string>
    <string name="hintAgeET">Введите возраст</string>
    <string name="hintSecondNameET">Введите фамилию</string>
    <string name="hintPositionTV">Выберите должность</string>
    <string name="textSaveBTN">Сохранить</string>
</resources>