<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintNameET"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/ageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintAgeET"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/secondNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSecondNameET"
                tools:ignore="Autofill,TextFields" />

            <Spinner
                android:id="@+id/positionSPNR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPositionTV"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSaveBTN"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/employeeLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/employee_list"/>

</LinearLayout>